# ohtupalautus

./: .gitignore  README.md
.github/workflows/: robotTest.yml
viikko1/nhl-statistics-1/src/: statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/git-branch-harjoitus/: changelog.txt  index.py
viikko2/nhl-reader/: pyproject.toml
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/: pyproject.toml
viikko2/project-reader/src/: project.py  project_reader.py
viikko3/web-login/: pyproject.toml
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: login.robot  register.robot  resource.robot
viikko3/webcounter/: pyproject.toml
viikko3/webcounter/src/: app.py
viikko3/webcounter/src/templates/: index.html
viikko3/webcounter/src/tests/: set.robot
viikko4/: retro.md
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/verkkokauppa/: .coveragerc  pyproject.toml
viikko4/verkkokauppa/src/: kauppa.py  ostoskori.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/: pyproject.toml
viikko5/int-joukko/src/: int_joukko.py
viikko5/laskin/src/: kayttoliittyma.py  sovelluslogiikka.py
viikko5/tennis/src/: tennis_game.py
viikko6/query-language/: pyproject.toml
viikko6/query-language/src/: index.py  matchers.py  query_builder.py
viikko7/kivi-paperi-sakset/: pyproject.toml
viikko7/kivi-paperi-sakset/src/: index.py  kivi_paperi_sakset.py  tekoaly.py  tekoaly_parannettu.py
