[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Oskar Vihriälä <oskar.vihriala@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
